services/aredn/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wireguard-tunnel
  namespace: aredn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: wireguard-tunnel
  egress:
  - toEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: kube-system
          k8s-app: kube-dns
    toPorts:
      - ports:
          - port: "53"
  - toCIDR:
      - 107.221.156.131/32
    toPorts:
      - ports:
          - port: "5588"
            protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: aredn
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: aredn
